Initial attempt to be a proper python module and more testing.
  - refactoring, restructuring code base for OSS release.
  - introduced a force_deploy configuration option.

Change-Id: I5253c9a601c063d6c763760804d2f45819005819

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,10 @@ work
 status.log
 *.html
 doc/html
-#virtualenv default listed below
-mypython/
+.travis.yaml
+build
+cover
+dist
+thrift_medusa.egg-info
+.coverage
+htmlcov
