--- a/thrift_medusa/config/appConfig.yaml
+++ b/thrift_medusa/config/appConfig.yaml
@@ -31,13 +31,13 @@ thrift:
         supported_languages: [java, ruby, doc]
         compiler_postfix: ""
         version: 0.6.1
-#      - name:  thrift.git
-#        bin: /Developer/thrift.git/compiler/cpp/thrift
-#        options: ""
-#        supported_languages: [js, doc]
-#        compiler_postfix: -0.9.1
-#        version: 0.9.1
-#      - name:  finagle
+      - name:  thrift_0.9
+        bin: /var/lib/jenkins/tools/thrift-0.9.1/thrift
+        options: ""
+        supported_languages: [java]
+        compiler_postfix: _thrift_0.9
+        version: 0.9.1
+   #      - name:  finagle
 #        bin: /Developer/thrift/bin/thrift
 #        options: ""
 #        supported_languages: [java, ruby]
