--- a/thrift_medusa/config/travis-ci.yaml
+++ b/thrift_medusa/config/travis-ci.yaml
@@ -2,14 +2,21 @@
 #  The purpose of this file is to drive the continuous integration build on 
 #  travis-ci.org. 
 thrift:
-   ##TODO: Constraints Not yet supported
+   ##Under Development
    constraints:
+     #enable/disable constraints.  Must be true if any of the options below are to be used.
+     use_constraints: true
+     ####  Options below can be enabled if desired but are considred alpha state #####
      #fails if required empty is set to false.
      enforce_empty: true
      #fails if changing a field from required to anything else
-     #visibilty_check: true
-     #check_field_ordering: true
-     #check_version_increment: true
+     visibilty_check: true
+     #####  Options below have yet to be implemented #####
+     # when enabled, ensures that field ordering is preserved
+     check_field_ordering: false
+     # when enabled ensures that if a file is changed and version is incremented
+     check_version_increment: false
+
    #these values are default options for all compilers.  They can be overridden on individual entries.
    global_compiler_options:
          java: --gen java:private-members,hashcode
